fix: resolve SonarCloud reliability + code-smell issues on chat search
- Web:InputWithoutLabelCheck (BUG, Reliability) RoomMessages.vue — give the
  chat find-bar input an id and an aria-label so it has an accessible name.
- java:S6885 MatrixService.searchChatMessages — use Math.clamp instead of
  Math.min/Math.max.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>